# lenz

./: .gitignore  README.md  build.sh  build.yml  dev.sallon.lenz.flatpak.yaml  dev.sh  eslint.config.js  extension.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  schema.json
agent/: Cargo.toml
agent/core/: Cargo.toml
agent/core/src/: lib.rs
agent/core/src/config/: config.rs  consts.rs  mod.rs  util.rs
agent/core/src/context/: extension.rs  mod.rs
agent/core/src/extensions/: manifest.rs  mod.rs  plugin.rs
agent/core/src/invoke/: form.rs  handler.rs  mod.rs  request.rs  result.rs
agent/core/src/macros/: invoke.rs  mod.rs
agent/extensions/: Cargo.toml  makefile
agent/extensions/dialog-fs/: .gitignore  Cargo.toml
agent/extensions/dialog-fs/frontend/: lenz.ts  package.json  pnpm-lock.yaml  tsconfig.app.tsbuildinfo  vite.config.ts
agent/extensions/dialog-fs/frontend/src/: main.tsx  types.ts
agent/extensions/dialog-fs/public/: main.js  manifest.json
agent/extensions/dialog-fs/src/: entry.rs  lib.rs  traverse.rs
agent/extensions/dialog-fs/src/folders/: linux.rs
agent/extensions/fs/: Cargo.toml
agent/extensions/fs/lib/: Cargo.toml
agent/extensions/fs/lib/src/: lib.rs
agent/extensions/fs/public/esm/: index.mjs
agent/extensions/fs/src/: handlers.rs  lib.rs
agent/extensions/html/: html.spec.json
agent/extensions/html/_frontend/: package.json  tsconfig.app.tsbuildinfo
agent/extensions/html/public/: commands.js  manifest.json  menubar.js
agent/extensions/icons/public/: manifest.json
agent/extensions/icons/public/esm/: abjad_arabic.mjs  abugida_thai.mjs  access_point_network.mjs  access_point_network_off.mjs  account_alert.mjs  account_arrow_down_outline.mjs  account_arrow_right.mjs  account_box_plus_outline.mjs  account_cancel.mjs  account_card.mjs  account_cash_outline.mjs  (+1862 more)
agent/extensions/layout/frontend/: pnpm-lock.yaml
agent/extensions/layout/public/: main.js  manifest.json
agent/server/: Cargo.toml  invoke.http
agent/server/resources/esm/: commands.mjs  dialog.mjs  extensions.mjs  file.mjs  history.mjs  hotkeys.mjs  invoke.mjs  menubar.mjs  tools.mjs
agent/server/resources/www/: index.html
agent/server/src/: app.rs  browser.rs  main.rs  paths.rs  server.rs
agent/server/src/scripts/: importmap.js  init.js
agent/server/src/state/: invoke_handlers.rs  mod.rs  static_assets.rs
extensions/dialog-fs/: Cargo.toml  install.sh
extensions/dialog-fs/frontend/: index.html  package.json  tsconfig.app.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  uno.config.ts  vite.config.ts
extensions/dialog-fs/frontend/src/: App.tsx  index.css  main.tsx
extensions/dialog-fs/public/: main.js  manifest.json
extensions/dialog-fs/public/esm/: index.js
extensions/dialog-fs/src/: _main.rs  lib.rs
(+9481 files in other folders)
