[workspace]
members = ["server", "core"]
resolver = "2"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[workspace.dependencies]
bytes = "1.7.1"
mime_guess = "2.0.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }