[workspace]
members = ["fs", "dialog-fs"]
resolver = "2"

[profile.release]
opt-level = "z"  # ou "s" para mais foco em tamanho
lto = true       # Link Time Optimization para reduzir o tamanho final
codegen-units = 1  # Garante que o compilador otimize ao máximo o código
debug = false     # Não incluir informações de depuração
panic = 'abort'   # Menor overhead ao lidar com panics

[workspace.dependencies]
bytes = "1.7.1"
tokio = { version = "1.40.0" }
serde={version = "1.0.210",features = ["derive"]}
serde_json={version = "1.0.128"}
