[package]
name = "lenz-extension-file-dialog"
version = "0.1.0"
edition = "2021"

[lib]
name = "lenz_extension_file_dialog"
crate-type = ["cdylib"]

[dependencies]
dirs = "5.0.1"
lenz_core={git = "https://github.com/salomaosnff/lenz.git", branch = "main"}
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
unicode-normalization = "0.1.23"
whoami = "1.5.2"
